Создание блоков html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,49 @@
 </head>
 
 <body>
-    <p>Первый</p>
-    <p>Второй</p>
-    <p>Третий</p>
-    >
+    <div class="main">
+        <div class="outher">
+            <div class="conteiner">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <p>Первый</p>
+                <p>Второй</p>
+                <p>Третий шире</p>
+            </div>
+            <div class="conteiner">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <p>Первый</p>
+                <p>Второй</p>
+                <p>Третий шире</p>
+            </div>
+            <div class="conteiner">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <p>Первый</p>
+                <p>Второй</p>
+                <p>Третий шире</p>
+            </div>
+        </div>
+    
+        <div class="outher">
+            <div class="conteiner">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <p>Первый</p>
+                <p>Второй</p>
+                <p>Третий шире</p>
+            </div>
+            <div class="conteiner">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <p>Первый</p>
+                <p>Второй</p>
+                <p>Третий шире</p>
+            </div>
+            <div class="conteiner">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <p>Первый</p>
+                <p>Второй</p>
+                <p>Третий шире</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
