Смена картинки из проэкта

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div class="main">
         <div class="outher">
             <div class="conteiner">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <img src="static/images/kotik.webp" alt="Картинка котенок">
                 <p>Первый</p>
                 <p>Второй</p>
                 <p>Третий шире</p>
             </div>
             <div class="conteiner">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <img src="static/images/kotik.webp" alt="Картинка котенок">
                 <p>Первый</p>
                 <p>Второй</p>
                 <p>Третий шире</p>
             </div>
             <div class="conteiner">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <img src="static/images/kotik.webp" alt="Картинка котенок">
                 <p>Первый</p>
                 <p>Второй</p>
                 <p>Третий шире</p>
@@ -34,19 +34,19 @@
     
         <div class="outher">
             <div class="conteiner">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <img src="static/images/kotik.webp" alt="Картинка котенок">
                 <p>Первый</p>
                 <p>Второй</p>
                 <p>Третий шире</p>
             </div>
             <div class="conteiner">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <img src="static/images/kotik.webp" alt="Картинка котенок">
                 <p>Первый</p>
                 <p>Второй</p>
                 <p>Третий шире</p>
             </div>
             <div class="conteiner">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/HTML.svg/274px-HTML.svg.png" alt="Картинка с Википедии">
+                <img src="static/images/kotik.webp" alt="Картинка котенок">
                 <p>Первый</p>
                 <p>Второй</p>
                 <p>Третий шире</p>
